# archtool

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  Makefile  README.md  conftest.py  dev_requirements.txt  index.html  llms-full.txt  llms.txt  mkdocs.yml  objects.inv  pyproject.toml  setup.cfg  setup.py  sitemap.xml  utils.py
.github/workflows/: ci.yml  docs.yml  publish.yml
api/app_module/: index.html
api/dependency_injector/: index.html
api/exceptions/: index.html
archtool/: __main__.py  dependecy_injector.py  dependency_injector.py  exceptions.py  global_types.py  utils.py
archtool.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
archtool/cli/: add_module_cmd.py  graph_cmd.py  init_cmd.py  main.py  validate_cmd.py
archtool/components/: default_component.py
archtool/interfaces/: __init__.py  dependecy_injector.py  dependency_injector.py  di_layer.py  layer.py
archtool/layers/: __init__.py  default_layer_interfaces.py  default_layers.py  di_basic_layer.py
bundler/: bundler.py  exceptions.py  interfaces.py  services.py  views.py
bundler/dependency_injector/: __init__.py  exceptions.py
bundler/dependency_injector/interfaces/: __init__.py  dependecy_injector.py  di_layer.py
bundler/dependency_injector/layers/: di_basic_layer.py
docs/: index.md  index.ru.md  why.md  why.ru.md
docs/api/: app_module.md  app_module.ru.md  dependency_injector.md  dependency_injector.ru.md  exceptions.md  exceptions.ru.md
docs/assets/: playground.js
docs/examples/: basic.md  basic.ru.md  nested.md  nested.ru.md  web_fractal.md  web_fractal.ru.md
docs/guide/: cli.md  cli.ru.md  comparison.md  comparison.ru.md  concepts.md  concepts.ru.md  custom_layers.md  custom_layers.ru.md  faq.md  faq.ru.md  installation.md  installation.ru.md  interface_first.md  interface_first.ru.md  layers.md  layers.ru.md  manual_registration.md  manual_registration.ru.md  modules.md  modules.ru.md  quickstart.md  quickstart.ru.md
docs/tutorials/: basic_example.md
example_project/: app.py  layers.py
example_project/test_module_1/: interfaces.py
example_project/test_module_2/: interfaces.py  repos.py  services.py
examples/basic/: index.html
examples/example_project/: app.py
examples/example_project/test_module_1/: interfaces.py  repos.py  services.py
examples/example_project/test_module_2/: interfaces.py  repos.py  services.py
examples/nested/: index.html
examples/web_fractal/: index.html
guide/cli/: index.html
guide/comparison/: index.html
guide/concepts/: index.html
guide/custom_layers/: index.html
guide/faq/: index.html
guide/installation/: index.html
guide/interface_first/: index.html
guide/layers/: index.html
guide/manual_registration/: index.html
guide/modules/: index.html
guide/quickstart/: index.html
injector/: dependecy_injector.py  exceptions.py  global_types.py  utils.py
injector.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
injector/components/: default_component.py
injector/example_project/: app.py  layers.py  layers_interfaces.py
injector/example_project/test_module_1/: repos.py  services.py
injector/injector.egg-info/: SOURCES.txt  top_level.txt
injector/interfaces/: dependecy_injector.py  di_layer.py
injector/layers/: __init__.py  default_layers.py  di_basic_layer.py
ru/: index.html
ru/api/app_module/: index.html
ru/api/dependency_injector/: index.html
ru/api/exceptions/: index.html
ru/examples/basic/: index.html
ru/examples/nested/: index.html
ru/examples/web_fractal/: index.html
ru/guide/cli/: index.html
ru/guide/comparison/: index.html
ru/guide/concepts/: index.html
ru/guide/custom_layers/: index.html
ru/guide/faq/: index.html
ru/guide/installation/: index.html
ru/guide/interface_first/: index.html
ru/guide/layers/: index.html
ru/guide/manual_registration/: index.html
ru/why/: index.html
search/: search_index.json
stylesheets/: extra.css
tests/: conftest.py
tests/integration/: test_inject.py  test_nested_modules.py
tests/regression/: test_circular_dependency.py  test_future_annotations.py  test_sys_path_independence.py
tests/unit/: test_exceptions.py  test_utils.py
tutorials/basic_example/: index.html
why/: index.html
(+16 files in other folders)
