[metadata]
name = archtool
version = 0.1.0
license = MIT
author = Aleksandr Chudaikin
author_email= aleksandrchudaikindev@gmail.com

description_file= file: README.md
# package_dir={'': 'injector'}
# py_modules=['injector'],
url=https://github.com/0nliner/injector
keywords=''

install_requires=[]

classifiers=
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires= >=3.8
packages = find:
include_package_data = true
zip_safe = false
