[metadata]
name = archtool
version = 0.1.7
license = MIT
author = Aleksandr Chudaikin
author_email= aleksandrchudaikindev@gmail.com

description_file= file: README.md
url=https://github.com/0nliner/archtool
keywords=''

install_requires=[]

classifiers=
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires= >=3.8
packages = find:
include_package_data = true
zip_safe = false
